Penambahan Layout Profil dan SUKSES login & register menggunakan Retrofit

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -70,6 +70,7 @@
                             android:textSize="@dimen/hp.ukuranteksinfo"/>
                     </LinearLayout>
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/fhxbtnprofil"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toTopOf="parent"
