Penambahan Layout Detail Pesanan, Alamat dan Metode

--- a/app/src/main/res/layout/fragment_interface_minuman.xml
+++ b/app/src/main/res/layout/fragment_interface_minuman.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Interfaces.InterfaceMinuman">
+    android:background="@color/white"
+    android:id="@+id/fminxconsmain"
+    tools:context=".Fragments.InterfaceMinumanFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/interxconsimage"
         android:layout_width="match_parent"
@@ -19,6 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:scaleType="centerCrop"/>
         <ImageView
+            android:id="@+id/fminxback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
