--- a/app/src/main/res/layout/fragment_interface_home.xml
+++ b/app/src/main/res/layout/fragment_interface_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Interfaces.InterfaceHome">
+    tools:context=".Fragments.InterfaceHomeFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/interxconsimage"
         android:layout_width="match_parent"
