--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -52,7 +52,7 @@
                     android:scaleType="centerCrop"/>
             </androidx.cardview.widget.CardView>
             <TextView
-                android:id="@+id/profxtxtnamaprofil"
+                android:id="@+id/profxnamaprofil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
@@ -63,6 +63,18 @@
                 android:textSize="@dimen/fh.ukuranteksjudul"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:ellipsize="end"
+                android:maxLines="1"/>
+            <TextView
+                android:id="@+id/profxusername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                app:layout_constraintTop_toBottomOf="@id/profxnamaprofil"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text="VariousRA"
+                android:textSize="@dimen/fh.ukurantekssubjudul"
                 android:ellipsize="end"
                 android:maxLines="1"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -135,7 +147,7 @@
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@id/profxnomortelp"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/editgreenicon"/>
+                android:src="@drawable/editblueicon"/>
             <TextView
                 android:id="@+id/profxlabelnomor2"
                 android:layout_width="0dp"
@@ -177,7 +189,7 @@
                 android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@id/profxalamat"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/editredicon"/>
+                android:src="@drawable/editblueicon"/>
             <TextView
                 android:id="@+id/profxlabelnomor3"
                 android:layout_width="0dp"
@@ -266,7 +278,7 @@
                     android:src="@drawable/logouticon"/>
 
                 <TextView
-                    android:id="@+id/profxlabelnomor5"
+                    android:id="@+id/profxlogout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/inter_bold"
