--- a/app/src/main/res/layout/homepage_rvkeranjang.xml
+++ b/app/src/main/res/layout/homepage_rvkeranjang.xml
@@ -24,8 +24,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
             <androidx.cardview.widget.CardView
                 android:id="@+id/friwxconsimage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/friwxcheckbox"
                 app:cardCornerRadius="10dp">
@@ -33,7 +33,8 @@
                     android:id="@+id/hpximage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/imagefood"/>
+                    android:src="@drawable/imagefood"
+                    android:scaleType="centerCrop"/>
             </androidx.cardview.widget.CardView>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/friwxconsjudul"
@@ -45,12 +46,12 @@
                 <TextView
                     android:id="@+id/hpxjudul"
                     android:layout_width="match_parent"
-                    android:layout_height="24dp"
+                    android:layout_height="18dp"
                     android:layout_margin="5dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:text="Judul Menu"
-                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textSize="@dimen/hpr.ukuranjudul"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:ellipsize="end"
@@ -60,7 +61,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:padding="5dp"
-                    android:layout_margin="5dp"
+                    android:layout_marginLeft="5dp"
                     android:src="@drawable/imagemin"
                     app:layout_constraintTop_toBottomOf="@id/hpxjudul"
                     app:layout_constraintStart_toStartOf="parent"
@@ -95,13 +96,13 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:text="Rp. 10000"
-                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textSize="@dimen/hpr.ukuranharga"
                     android:textColor="@color/red"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_margin="5dp"
+                android:layout_marginHorizontal="5dp"
                 app:layout_constraintTop_toBottomOf="@id/friwxconsjudul"
                 app:layout_constraintStart_toEndOf="@id/friwxconsimage"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -119,7 +120,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:text="Total harga :"
-                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textSize="@dimen/hpr.ukuranharga"
                     android:textColor="@color/black"/>
                 <TextView
                     android:id="@+id/hpxtotal"
@@ -130,7 +131,7 @@
                     app:layout_constraintStart_toEndOf="@id/fkerxtxttotalharga"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:text="Rp. 40000"
-                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textSize="@dimen/hpr.ukuranharga"
                     android:textColor="@color/red"
                     android:textStyle="bold"
                     android:ellipsize="end"
