--- a/app/src/main/res/layout/homepage_rvriwayat.xml
+++ b/app/src/main/res/layout/homepage_rvriwayat.xml
@@ -17,17 +17,20 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <CheckBox
                 android:id="@+id/friwxcheckbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="visible"/>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/friwxconsimage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/friwxcheckbox"
                 app:cardCornerRadius="10dp">
@@ -35,7 +38,8 @@
                     android:id="@+id/hpximage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/imagefood"/>
+                    android:src="@drawable/imagefood"
+                    android:scaleType="centerCrop"/>
                 <TextView
                     android:id="@+id/friwxcheckinit"
                     android:layout_width="0dp"
@@ -51,27 +55,29 @@
                 <TextView
                     android:id="@+id/hpxjudul"
                     android:layout_width="match_parent"
-                    android:layout_height="24dp"
+                    android:layout_height="18dp"
                     android:layout_margin="5dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:text="Judul Menu"
-                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textSize="@dimen/hpr.ukuranjudul"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:ellipsize="end"
                     android:maxLines="1"/>
+
                 <TextView
                     android:id="@+id/hpxharga"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
+                    android:layout_marginStart="4dp"
                     android:gravity="right"
-                    app:layout_constraintTop_toBottomOf="@id/hpxjudul"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:text="Rp. 10000"
-                    android:textSize="@dimen/hp.ukuranteksinfo"
-                    android:textColor="@color/red"/>
+                    android:textColor="@color/red"
+                    android:textSize="@dimen/hpr.ukuranharga"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/hpxjudul" />
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -84,7 +90,6 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:background="#bdbdbd" />
@@ -95,7 +100,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:text="x50"
-                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textSize="@dimen/hpr.ukuranharga"
                     android:textColor="@color/black"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -103,7 +108,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:text="20-11-2022"
-                    android:textSize="@dimen/hp.ukuranteksinfo"/>
+                    android:textSize="@dimen/hpr.ukuranharga"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
