--- a/app/src/main/res/layout/fragment_interface_home.xml
+++ b/app/src/main/res/layout/fragment_interface_home.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:id="@+id/fhomexconsmain"
     tools:context=".Fragments.InterfaceHomeFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/interxconsimage"
@@ -19,6 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:scaleType="centerCrop"/>
         <ImageView
+            android:id="@+id/fhomexback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
@@ -33,6 +36,15 @@
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/interxconsimage"
         app:layout_constraintStart_toStartOf="parent">
+        <TextView
+            android:id="@+id/interxidmenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text=" "
+            android:textSize="@dimen/hp.ukuranteksinfo"
+            android:visibility="visible"/>
         <TextView
             android:id="@+id/interxjudulmenu"
             android:layout_width="wrap_content"
