--- a/app/src/main/res/layout/fragment_interface_minuman.xml
+++ b/app/src/main/res/layout/fragment_interface_minuman.xml
@@ -37,6 +37,15 @@
         app:layout_constraintTop_toBottomOf="@id/interxconsimage"
         app:layout_constraintStart_toStartOf="parent">
         <TextView
+            android:id="@+id/interxidmenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text=" "
+            android:textSize="@dimen/hp.ukuranteksinfo"
+            android:visibility="invisible"/>
+        <TextView
             android:id="@+id/interxjudulmenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
