--- a/app/src/main/res/layout/fragment_minuman.xml
+++ b/app/src/main/res/layout/fragment_minuman.xml
@@ -60,6 +60,10 @@
             android:layout_height="0dp"
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/dataxidmenu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
                 android:id="@+id/dataxjudul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
