--- a/app/src/main/res/layout/homepage_rvmenu.xml
+++ b/app/src/main/res/layout/homepage_rvmenu.xml
@@ -27,7 +27,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:orientation="vertical">
-
+                <TextView
+                    android:id="@+id/hpxidmenu"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"/>
                 <TextView
                     android:id="@+id/hpxjudul"
                     android:layout_width="wrap_content"
