Data User pada Home dan Profil berhasil terhubung ke Database serta seluruh data User dapat diperbarui

--- a/app/src/main/res/layout/fragment_home_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_home_splash_screen.xml
@@ -37,14 +37,17 @@
 
         <TextView
             android:id="@+id/hssxtextNama"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="80dp"
             android:text="Nama Kamu"
             android:textColor="@color/dark_blue"
             android:textSize="30sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:ellipsize="end"
+            android:maxLines="1"/>
     </LinearLayout>
 
 
