--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,21 +42,26 @@
                             android:src="@drawable/imagedrink"/>
                     </androidx.cardview.widget.CardView>
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toEndOf="@id/fhximageprofil"
+                        app:layout_constraintEnd_toStartOf="@id/fhxbtnprofil"
                         android:orientation="vertical">
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:id="@+id/fhxtxtnama"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/inter_bold"
                             android:text="Halo, Maulana!"
                             android:textColor="@color/dark_blue"
                             android:textSize="@dimen/hp.ukuranteksatas"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:ellipsize="end"
+                            android:maxLines="1"/>
                         <TextView
+                            android:id="@+id/fhxtxtnomor"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
@@ -64,10 +69,13 @@
                             android:textSize="@dimen/hp.ukuranteksinfo"
                             android:textColor="@color/black"/>
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:id="@+id/fhxtxtemail"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="variousra@gmail.com"
-                            android:textSize="@dimen/hp.ukuranteksinfo"/>
+                            android:textSize="@dimen/hp.ukuranteksinfo"
+                            android:ellipsize="end"
+                            android:maxLines="1"/>
                     </LinearLayout>
                     <androidx.cardview.widget.CardView
                         android:id="@+id/fhxbtnprofil"
