--- a/app/src/main/res/layout/fragment_interface_home.xml
+++ b/app/src/main/res/layout/fragment_interface_home.xml
@@ -40,11 +40,11 @@
             android:id="@+id/interxidmenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/interxjudulmenu"
             app:layout_constraintStart_toStartOf="parent"
-            android:text=" "
+            android:text="PRDK001"
             android:textSize="@dimen/hp.ukuranteksinfo"
-            android:visibility="visible"/>
+            android:visibility="invisible"/>
         <TextView
             android:id="@+id/interxjudulmenu"
             android:layout_width="wrap_content"
