--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -69,12 +69,26 @@
                 android:id="@+id/profxusername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_margin="10dp"
                 app:layout_constraintTop_toBottomOf="@id/profxnamaprofil"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:text="VariousRA"
                 android:textSize="@dimen/fh.ukurantekssubjudul"
+                android:ellipsize="end"
+                android:maxLines="1"/>
+            <TextView
+                android:id="@+id/profxtxtedit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/profxusername"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text="Edit Info"
+                android:textSize="@dimen/fh.ukurantekssubjudul"
+                android:textColor="@color/dark_blue"
                 android:ellipsize="end"
                 android:maxLines="1"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -86,7 +100,7 @@
                 android:id="@+id/profxview1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:background="#bdbdbd" />
