Transaksi dengan Button "Beli" berhasil dan terhubung ke SQL

--- a/app/src/main/res/layout/alert_nama.xml
+++ b/app/src/main/res/layout/alert_nama.xml
@@ -39,7 +39,8 @@
                 android:inputType="text"
                 android:textColor="@color/black"
                 android:textColorHint="@color/dark_blue"
-                android:textSize="@dimen/lp.ukuranteksinput" />
+                android:textSize="@dimen/lp.ukuranteksinput"
+                android:maxLength="30"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
