--- a/app/src/main/res/layout/fragment_home_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_home_splash_screen.xml
@@ -31,23 +31,24 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="30dp"
             android:text="SELAMAT DATANG"
-            android:textColor="@color/dark_blue"
-            android:textSize="25sp"
+            android:textColor="@color/dark_purple"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/hssxtextNama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:gravity="center"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="80dp"
             android:text="Nama Kamu"
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/light_blue"
             android:textSize="30sp"
             android:textStyle="bold"
             android:ellipsize="end"
-            android:maxLines="1"/>
+            android:maxLines="2"/>
     </LinearLayout>
 
 
