--- a/app/src/main/res/layout/fragment_interface_home.xml
+++ b/app/src/main/res/layout/fragment_interface_home.xml
@@ -56,6 +56,15 @@
             android:textColor="@color/black"
             android:textStyle="bold"/>
         <TextView
+            android:id="@+id/interxidtransaksi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/interxjudulmenu"
+            android:text="Judul Menu"
+            android:textSize="@dimen/hp.ukuranteksinfo"
+            android:visibility="visible"/>
+        <TextView
             android:id="@+id/interxdescmenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
