--- a/app/src/main/res/layout/fragment_interface_makanan.xml
+++ b/app/src/main/res/layout/fragment_interface_makanan.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <ImageView
+            android:id="@+id/interximage"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:src="@drawable/imagefood"
