--- a/app/src/main/res/layout/fragment_makanan.xml
+++ b/app/src/main/res/layout/fragment_makanan.xml
@@ -79,11 +79,10 @@
                 android:id="@+id/dataxstok"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-            <ImageView
+            <TextView
                 android:id="@+id/dataximage"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/imageplus"/>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
     <ScrollView
