--- a/app/src/main/res/layout/homepage_rvriwayat.xml
+++ b/app/src/main/res/layout/homepage_rvriwayat.xml
@@ -103,6 +103,7 @@
                     android:textSize="@dimen/hpr.ukuranharga"
                     android:textColor="@color/black"/>
                 <TextView
+                    android:id="@+id/hpxtanggal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
