--- a/app/src/main/res/menu/home_navmenu.xml
+++ b/app/src/main/res/menu/home_navmenu.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/hfxmenu1"
         android:title="Beranda"
-        android:icon="@drawable/bucketicon"/>
+        android:icon="@drawable/homeicon"/>
     <item android:id="@+id/hfxmenu2"
         android:title="Makanan"
-        android:icon="@drawable/bucketicon"/>
+        android:icon="@drawable/makananicon"/>
     <item android:id="@+id/hfxmenu3"
         android:title="Minuman"
-        android:icon="@drawable/bucketicon"/>
+        android:icon="@drawable/minumanicon"/>
     <item android:id="@+id/hfxmenu4"
         android:title="Riwayat"
-        android:icon="@drawable/bucketicon"/>
+        android:icon="@drawable/riwayaticon"/>
     <item android:id="@+id/hfxmenu5"
         android:title="Keranjang"
         android:icon="@drawable/bucketicon"/>
