--- a/app/src/main/res/layout/fragment_interface_makanan.xml
+++ b/app/src/main/res/layout/fragment_interface_makanan.xml
@@ -13,14 +13,16 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
         <ImageView
             android:id="@+id/interximage"
             android:layout_width="match_parent"
             android:layout_height="250dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/imagefood"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:scaleType="centerCrop"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/fmakxback"
             android:layout_width="wrap_content"
@@ -56,15 +58,16 @@
             android:textSize="@dimen/hp.ukuranteksinfo"
             android:textColor="@color/black"
             android:textStyle="bold"/>
+
         <TextView
             android:id="@+id/interxidtransaksi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/interxjudulmenu"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:text="Judul Menu"
             android:textSize="@dimen/hp.ukuranteksinfo"
-            android:visibility="visible"/>
+            android:visibility="invisible"
+            app:layout_constraintStart_toEndOf="@id/interxjudulmenu"
+            app:layout_constraintTop_toTopOf="parent" />
         <TextView
             android:id="@+id/interxdescmenu"
             android:layout_width="wrap_content"
