--- a/app/src/main/res/layout/fragment_interface_minuman.xml
+++ b/app/src/main/res/layout/fragment_interface_minuman.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <ImageView
+            android:id="@+id/interximage"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:src="@drawable/imagedrink3"
@@ -57,13 +58,13 @@
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/interxidtransaksi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/interxjudulmenu"
             android:text="Judul Menu"
             android:textSize="@dimen/hp.ukuranteksinfo"
-            android:visibility="visible"/>
+            android:visibility="invisible"/>
         <TextView
             android:id="@+id/interxdescmenu"
             android:layout_width="wrap_content"
