--- a/app/src/main/res/layout/fragment_splash_selesai.xml
+++ b/app/src/main/res/layout/fragment_splash_selesai.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:id="@+id/consanimate"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.SplashSelesaiFragment">
     <ImageView
