Fungsi filter pada Riwayat selesai dan peningkatan UX Aplikasi

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -205,6 +205,16 @@
                             android:textColor="@color/light_blue"
                             android:textStyle="bold"/>
                     </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/fhxteksttpromo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginVertical="10dp"
+                        android:text="Menu Tidak Tersedia"
+                        android:textSize="@dimen/fh.ukuranteksjudul"
+                        android:textStyle="bold"
+                        android:visibility="gone"/>
                     <ScrollView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
@@ -237,6 +247,16 @@
                             android:textSize="@dimen/fh.ukurantekssubjudul"
                             android:textStyle="bold"/>
                     </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/fhxteksttterakhir"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginVertical="10dp"
+                        android:text="Menu Tidak Tersedia"
+                        android:textSize="@dimen/fh.ukuranteksjudul"
+                        android:textStyle="bold"
+                        android:visibility="gone"/>
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/hpxrvterakhir"
                         android:layout_width="match_parent"
