--- a/app/src/main/res/layout/alert_filter.xml
+++ b/app/src/main/res/layout/alert_filter.xml
@@ -42,6 +42,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:orientation="horizontal">
                 <RadioButton
+                    android:id="@+id/daxradioalamat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
@@ -50,6 +51,78 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="1 Januari 2000"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textColor="@color/dark_blue"/>
+                <TextView
+                    android:id="@+id/filter1xtxttgl2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="1 Januari 2000"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textColor="@color/dark_blue"
+                    android:visibility="gone"/>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/alertxtxtfiltermenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/alertxlayoutinput"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Filter Menu"
+            android:textSize="@dimen/hp.ukuranteksinfo"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/alertxlayoutinput2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/alertxtxtfiltermenu"
+            app:layout_constraintStart_toStartOf="parent">
+            <LinearLayout
+                android:id="@+id/filter1xlinear2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/daxradiomakanan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/filter1xtxtmakanan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Semua Makanan"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textColor="@color/dark_blue"/>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/alertxlayoutinput3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/alertxlayoutinput2"
+            app:layout_constraintStart_toStartOf="parent">
+            <LinearLayout
+                android:id="@+id/filter1xlinear3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/daxradiominuman"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/filter1xtxtminuman"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Semua Minuman"
                     android:textSize="@dimen/hp.ukuranteksinfo"
                     android:textColor="@color/dark_blue"/>
             </LinearLayout>
@@ -72,7 +145,7 @@
             android:id="@+id/alertxbtnkirim"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/alertxlayoutinput"
+            app:layout_constraintTop_toBottomOf="@id/alertxlayoutinput3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="20dp"
