--- a/app/src/main/res/layout/fragment_makanan.xml
+++ b/app/src/main/res/layout/fragment_makanan.xml
@@ -44,6 +44,7 @@
                 android:textSize="@dimen/lp.ukuranteksinput" />
         </com.google.android.material.textfield.TextInputLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/fmakxconsspinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/fh.margintekssubjudul">
@@ -55,6 +56,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_height="wrap_content"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/fmakxteksttmakanan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/fmakxconsspinner"
+            android:gravity="center"
+            android:layout_marginVertical="20dp"
+            android:text="Menu Tidak Tersedia"
+            android:textSize="@dimen/fh.ukuranteksjudul"
+            android:textStyle="bold"
+            android:visibility="visible"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
