--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!--duration bisa diganti dengan value integer, contoh : android:duration="600"-->
+<!--default : @android:integer/config_longAnimTime-->
+<set xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="@android:integer/config_longAnimTime"
-    android:interpolator="@android:anim/decelerate_interpolator"
-    android:fromAlpha="0"
-    android:toAlpha="1" />
+    android:startOffset="100"
+    android:shareInterpolator="@android:anim/accelerate_interpolator">
+    <alpha
+        android:fromAlpha="0.0"
+        android:toAlpha="1.0"/>
+</set>
