--- a/app/src/main/res/anim/zoom_in.xml
+++ b/app/src/main/res/anim/zoom_in.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<scale xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="400"
-    android:fromXScale="100%"
-    android:fromYScale="100%"
-    android:toXScale="110%"
-    android:toYScale="110%"
-    android:pivotX="50%"
-    android:pivotY="50%">
-</scale>
+
+<!--duration bisa diganti dengan value integer, contoh : android:duration="600"-->
+<!--default : @android:integer/config_longAnimTime-->
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="@android:integer/config_longAnimTime"
+    android:startOffset="100"
+    android:shareInterpolator="@android:anim/accelerate_interpolator">
+    <scale xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="400"
+        android:fromXScale="100%"
+        android:fromYScale="100%"
+        android:toXScale="110%"
+        android:toYScale="110%"
+        android:pivotX="50%"
+        android:pivotY="50%">
+    </scale>
+</set>
